@@ -19,10 +19,10 @@ import com.sun.source.util.DocTrees;
 import com.sun.source.util.SimpleDocTreeVisitor;
 import io.github.classgraph.ClassGraph;
 import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.File;
-import java.io.OutputStreamWriter;
+import java.io.IOException;
 import java.io.PrintWriter;
+import java.io.UncheckedIOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
@@ -48,6 +48,7 @@ import jdk.javadoc.doclet.Doclet;
 import jdk.javadoc.doclet.DocletEnvironment;
 import jdk.javadoc.doclet.Reporter;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.commons.text.StringEscapeUtils;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.checkerframework.checker.nullness.qual.RequiresNonNull;
@@ -170,6 +171,7 @@ import org.plumelib.reflection.Signatures;
 
 // This doesn't itself use org.plumelib.options.Options for its command-line option processing
 // because Doclet has a different way of processing command-line options.
+@SuppressWarnings("PMD.BooleanGetMethodName")
 public class OptionsDoclet implements Doclet {
 
   /** The system-specific line separator. */
@@ -192,7 +194,7 @@ public class OptionsDoclet implements Doclet {
 
   /** Help message about options that can be specified multiple times. */
   private static final String LIST_HELP =
-      "<code>[+]</code> means option can be specified multiple times";
+      "{@code [+]} means option can be specified multiple times";
 
   /** Marker for start of options documentation. */
   private String startDelim = "<!-- start options doc (DO NOT EDIT BY HAND) -->";
@@ -322,7 +324,7 @@ public class OptionsDoclet implements Doclet {
 
     Object[] objarray = objs.toArray();
     options = new Options(objarray);
-    if (options.getOptions().size() < 1) {
+    if (options.getOptions().isEmpty()) {
       System.out.println("Error: no @Option-annotated fields found");
       return false;
     }
@@ -330,7 +332,7 @@ public class OptionsDoclet implements Doclet {
     processJavadoc();
     try {
       write();
-    } catch (Exception e) {
+    } catch (Throwable e) {
       e.printStackTrace();
       return false;
     }
@@ -342,7 +344,7 @@ public class OptionsDoclet implements Doclet {
   // Javadoc command-line options
   //
 
-  // The doclet cannot use the Options class itself because  Javadoc specifies its own way of
+  // The doclet cannot use the Options class itself because Javadoc specifies its own way of
   // handling command-line arguments.
 
   /** A value that indicates that a method completed successfully. */
@@ -485,7 +487,7 @@ public class OptionsDoclet implements Doclet {
           new DocletOption("-i", "", 0, "the docfile should be edited in place") {
             @Override
             public boolean process(String option, List<String> arguments) {
-              assert arguments.size() == 0;
+              assert arguments.isEmpty();
               inPlace = true;
               return OK;
             }
@@ -504,11 +506,10 @@ public class OptionsDoclet implements Doclet {
               return OK;
             }
           },
-          new DocletOption(
-              "--classdoc", "-classdoc", "", 0, "the docfile should be edited in place") {
+          new DocletOption("--classdoc", "-classdoc", "", 0, "include 'main' class documentation") {
             @Override
             public boolean process(String option, List<String> arguments) {
-              assert arguments.size() == 0;
+              assert arguments.isEmpty();
               includeClassDoc = true;
               return OK;
             }
@@ -521,7 +522,7 @@ public class OptionsDoclet implements Doclet {
               "show long options with leading \"-\" instead of \"--\"") {
             @Override
             public boolean process(String option, List<String> arguments) {
-              assert arguments.size() == 0;
+              assert arguments.isEmpty();
               setUseSingleDash(true);
               return OK;
             }
@@ -569,6 +570,7 @@ public class OptionsDoclet implements Doclet {
    * @param clazz the class whose values will be created by command-line arguments
    * @return true if the class needs to be instantiated before command-line arguments are parsed
    */
+  @SuppressWarnings("PMD.UnnecessaryFullyQualifiedName") // false positive
   private static boolean needsInstantiation(Class<?> clazz) {
     for (Field f : clazz.getDeclaredFields()) {
       if (f.isAnnotationPresent(org.plumelib.options.Option.class)
@@ -592,40 +594,36 @@ public class OptionsDoclet implements Doclet {
   // File IO methods
   //
 
-  /**
-   * Write the output of this doclet to the correct file.
-   *
-   * @throws Exception if there is trouble
-   */
-  public void write() throws Exception {
-    PrintWriter out;
-    // `output()` is called here because it might throw an exception; if called after `out` is set,
-    // that exception might prevent `out` from being closed.
+  /** Write the output of this doclet to the correct file. */
+  public void write() {
     String output = output();
 
+    File file;
     if (outFile != null) {
-      out = new PrintWriter(Files.newBufferedWriter(outFile.toPath(), UTF_8));
+      file = outFile;
     } else if (inPlace) {
       assert docFile != null
           : "@AssumeAssertion(nullness): dependent: docFile is non-null if inPlace is true";
-      out = new PrintWriter(Files.newBufferedWriter(docFile.toPath(), UTF_8));
+      file = docFile;
     } else {
-      out = new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.out, UTF_8)));
+      System.out.println(output);
+      return;
     }
 
-    out.println(output);
-    out.flush();
-    out.close();
+    try (PrintWriter out = new PrintWriter(Files.newBufferedWriter(file.toPath(), UTF_8))) {
+      out.println(output);
+    } catch (IOException e) {
+      throw new UncheckedIOException("Problem writing to " + file, e);
+    }
   }
 
   /**
-   * Get the final output of this doclet. The string returned by this method is the output seen by
-   * the user.
+   * Returns the final output of this doclet. The string returned by this method is the output seen
+   * by the user.
    *
    * @return the user-visible doclet output
-   * @throws Exception if there is trouble
    */
-  public String output() throws Exception {
+  public String output() {
     if (docFile == null) {
       if (formatJavadoc) {
         return optionsToJavadoc(0, 99);
@@ -638,13 +636,12 @@ public class OptionsDoclet implements Doclet {
   }
 
   /**
-   * Get the result of inserting the options documentation into the docfile.
+   * Returns the result of inserting the options documentation into the docfile.
    *
    * @return the docfile, but with the command-line argument documentation updated
-   * @throws Exception if there is trouble reading files
    */
   @RequiresNonNull("docFile")
-  private String newDocFileText() throws Exception {
+  private String newDocFileText() {
     StringJoiner b = new StringJoiner(lineSep);
     try (BufferedReader doc = Files.newBufferedReader(docFile.toPath(), UTF_8)) {
       String docline;
@@ -681,6 +678,8 @@ public class OptionsDoclet implements Doclet {
       if (!replacedOnce) {
         System.err.println("Did not find start delimiter: " + startDelim);
       }
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     }
     return b.toString();
   }
@@ -798,7 +797,7 @@ public class OptionsDoclet implements Doclet {
   }
 
   /**
-   * Get the HTML documentation for the underlying Options instance.
+   * Returns the HTML documentation for the underlying Options instance.
    *
    * @param refillWidth the number of columns to fit the text into, by breaking lines
    * @return the HTML documentation for the underlying Options instance
@@ -807,9 +806,9 @@ public class OptionsDoclet implements Doclet {
     StringJoiner b = new StringJoiner(lineSep);
 
     Set<? extends Element> classes = denv.getSpecifiedElements();
-    if (includeClassDoc && classes.size() > 0) {
+    if (includeClassDoc && !classes.isEmpty()) {
       Element firstElement = classes.iterator().next();
-      b.add(OptionsDoclet.docCommentToHtml(docTrees.getDocCommentTree(firstElement)));
+      b.add(docCommentToHtml(docTrees.getDocCommentTree(firstElement)));
       b.add("<p>Command line options:</p>");
     }
 
@@ -849,7 +848,8 @@ public class OptionsDoclet implements Doclet {
   }
 
   /**
-   * Get the HTML documentation for the underlying Options instance, formatted as a Javadoc comment.
+   * Returns the HTML documentation for the underlying Options instance, formatted as a Javadoc
+   * comment.
    *
    * @param padding the number of leading spaces to add in the Javadoc output, before "* "
    * @param refillWidth the number of columns to fit the text into, by breaking lines
@@ -857,25 +857,25 @@ public class OptionsDoclet implements Doclet {
    */
   public String optionsToJavadoc(int padding, int refillWidth) {
     StringJoiner b = new StringJoiner(lineSep);
-    Scanner s = new Scanner(optionsToHtml(refillWidth - padding - 2));
-
-    while (s.hasNextLine()) {
-      String line = s.nextLine();
-      StringBuilder bb = new StringBuilder();
-      bb.append(StringUtils.repeat(" ", padding));
-      if (line.trim().equals("")) {
-        bb.append("*");
-      } else {
-        bb.append("* ").append(line);
+    try (Scanner s = new Scanner(optionsToHtml(refillWidth - padding - 2))) {
+      while (s.hasNextLine()) {
+        String line = s.nextLine();
+        StringBuilder bb = new StringBuilder();
+        bb.append(StringUtils.repeat(' ', padding));
+        if (line.trim().equals("")) {
+          bb.append('*');
+        } else {
+          bb.append("* ").append(line);
+        }
+        b.add(bb);
       }
-      b.add(bb);
     }
 
     return b.toString();
   }
 
   /**
-   * Get the HTML describing many options, formatted as an HTML list.
+   * Returns the HTML describing many options, formatted as an HTML list.
    *
    * @param optList the options to document
    * @param padding the number of leading spaces to add before each line of HTML output, except the
@@ -892,10 +892,10 @@ public class OptionsDoclet implements Doclet {
       if (oi.unpublicized) {
         continue;
       }
-      StringBuilder bb = new StringBuilder();
+      StringBuilder bb = new StringBuilder(32);
       String optHtml = optionToHtml(oi, padding);
       bb.append(StringUtils.repeat(" ", padding));
-      bb.append("<li id=\"option:" + oi.longName + "\">").append(optHtml);
+      bb.append("<li id=\"option:").append(oi.longName).append("\">").append(optHtml);
       // .append("</li>");
       if (refillWidth <= 0) {
         b.add(bb);
@@ -947,7 +947,7 @@ public class OptionsDoclet implements Doclet {
         break;
       }
       String firstPart = oneLine.substring(0, breakLoc);
-      if (firstPart.trim().isEmpty()) {
+      if (firstPart.isBlank()) {
         break;
       }
       multiLine.add(firstPart);
@@ -955,16 +955,17 @@ public class OptionsDoclet implements Doclet {
     }
     multiLine.add(oneLine);
     if (suffix != null) {
-      Scanner s = new Scanner(suffix);
-      while (s.hasNextLine()) {
-        multiLine.add(StringUtils.repeat(" ", padding) + s.nextLine());
+      try (Scanner s = new Scanner(suffix)) {
+        while (s.hasNextLine()) {
+          multiLine.add(StringUtils.repeat(" ", padding) + s.nextLine());
+        }
       }
     }
     return multiLine.toString();
   }
 
   /**
-   * Get the line of HTML describing one Option.
+   * Returns the line of HTML describing one Option.
    *
    * @param oi the option to describe
    * @param padding the number of spaces to add at the begginning of the detail line (after the line
@@ -972,35 +973,36 @@ public class OptionsDoclet implements Doclet {
    * @return HTML describing oi
    */
   public String optionToHtml(Options.OptionInfo oi, int padding) {
-    StringBuilder b = new StringBuilder();
-    Formatter f = new Formatter(b);
-    if (oi.shortName != null) {
-      f.format("<b>-%s</b> ", oi.shortName);
-    }
-    for (String a : oi.aliases) {
-      f.format("<b>%s</b> ", a);
-    }
-    String prefix = getUseSingleDash() ? "-" : "--";
-    f.format("<b>%s%s=</b><i>%s</i>", prefix, oi.longName, oi.typeName);
-    if (oi.list != null) {
-      b.append(" <code>[+]</code>");
-    }
-    f.format(".%n ");
-    f.format("%s", StringUtils.repeat(" ", padding));
-
-    String jdoc = ((oi.jdoc == null) ? "" : oi.jdoc);
-    if (oi.noDocDefault || oi.defaultStr == null) {
-      f.format("%s", jdoc);
-    } else {
-      String defaultStr = "default: " + oi.defaultStr;
-      // The default string must be HTML-escaped since it comes from a string
-      // rather than a Javadoc comment.
-      String suffix = "";
-      if (jdoc.endsWith("</p>")) {
-        suffix = "</p>";
-        jdoc = jdoc.substring(0, jdoc.length() - suffix.length());
+    StringBuilder b = new StringBuilder(64);
+    try (Formatter f = new Formatter(b)) {
+      if (oi.shortName != null) {
+        f.format("<b>-%s</b> ", oi.shortName);
       }
-      f.format("%s [%s]%s", jdoc, StringEscapeUtils.escapeHtml4(defaultStr), suffix);
+      for (String a : oi.aliases) {
+        f.format("<b>%s</b> ", a);
+      }
+      String prefix = getUseSingleDash() ? "-" : "--";
+      f.format("<b>%s%s=</b><i>%s</i>", prefix, oi.longName, oi.typeName);
+      if (oi.list != null) {
+        b.append(" {@code [+]}");
+      }
+      f.format(".%n ");
+      f.format("%s", StringUtils.repeat(" ", padding));
+
+      String jdoc = ((oi.jdoc == null) ? "" : oi.jdoc);
+      if (oi.noDocDefault || oi.defaultStr == null) {
+        f.format("%s", jdoc);
+      } else {
+        String defaultStr = "default: " + oi.defaultStr;
+        // The default string must be HTML-escaped since it comes from a string
+        // rather than a Javadoc comment.
+        String suffix = "";
+        if (jdoc.endsWith("</p>")) {
+          suffix = "</p>";
+          jdoc = jdoc.substring(0, jdoc.length() - suffix.length());
+        }
+        f.format("%s [%s]%s", jdoc, StringEscapeUtils.escapeHtml4(defaultStr), suffix);
+      }
     }
     if (oi.baseType.isEnum()) {
       b.append(lineSep).append("<ul>").append(lineSep);
@@ -1009,7 +1011,7 @@ public class OptionsDoclet implements Doclet {
       for (Map.Entry<String, String> entry : oi.enumJdoc.entrySet()) {
         b.append("  <li><b>").append(entry.getKey()).append("</b>");
         if (entry.getValue().length() != 0) {
-          b.append(" ").append(entry.getValue());
+          b.append(' ').append(entry.getValue());
         }
         // b.append("</li>");
         b.append(lineSep);
@@ -1029,7 +1031,11 @@ public class OptionsDoclet implements Doclet {
    * @param docCommentTree a Javadoc comment to convert to HTML
    * @return HTML version of doc
    */
-  public static String docCommentToHtml(DocCommentTree docCommentTree) {
+  public static String docCommentToHtml(@Nullable DocCommentTree docCommentTree) {
+    if (docCommentTree == null) {
+      return "";
+    }
+
     StringBuilder result = new StringBuilder();
 
     new DocCommentToHtmlVisitor().visitDocComment(docCommentTree, result);
@@ -1088,12 +1094,12 @@ public class OptionsDoclet implements Doclet {
     @Override
     public Void visitLink(LinkTree node, StringBuilder sb) {
       List<? extends DocTree> label = node.getLabel();
-      if (label.size() > 0) {
+      if (!label.isEmpty()) {
         visitList(label, sb);
       } else {
-        sb.append("<code>");
+        sb.append("{@code ");
         sb.append(node.getReference().getSignature());
-        sb.append("</code>");
+        sb.append('}');
       }
       return null;
     }
@@ -1101,9 +1107,9 @@ public class OptionsDoclet implements Doclet {
     // LiteralTree is for {@code ...} and {@literal ...}.
     @Override
     public Void visitLiteral(LiteralTree node, StringBuilder sb) {
-      sb.append("<code>");
+      sb.append("{@code ");
       visitText(node.getBody(), sb);
-      sb.append("</code>");
+      sb.append('}');
       return null;
     }
 
@@ -1213,16 +1219,16 @@ public class OptionsDoclet implements Doclet {
       startDelim = "* " + startDelim;
       endDelim = "* " + endDelim;
     } else if (!val && formatJavadoc) {
-      startDelim = StringUtils.removeStart("* ", startDelim);
-      endDelim = StringUtils.removeStart("* ", endDelim);
+      startDelim = Strings.CS.removeStart("* ", startDelim);
+      endDelim = Strings.CS.removeStart("* ", endDelim);
     }
     this.formatJavadoc = val;
   }
 
   /**
-   * Return true if using a single dash (as opposed to a double dash) for command-line options.
+   * Returns true if using a single dash (as opposed to a double dash) for command-line options.
    *
-   * @return whether to use a single dash (as opposed to a double dash) for command-line options
+   * @return true if using a single dash (as opposed to a double dash) for command-line options
    */
   public boolean getUseSingleDash() {
     return options.getUseSingleDash();
@@ -1231,9 +1237,9 @@ public class OptionsDoclet implements Doclet {
   /**
    * See {@link Options#setUseSingleDash(boolean)}.
    *
-   * @param val whether to use a single dash (as opposed to a double dash) for command-line options
+   * @param val if true, use a single dash (as opposed to a double dash) for command-line options
    */
   public void setUseSingleDash(boolean val) {
-    options.setUseSingleDash(true);
+    options.setUseSingleDash(val);
   }
 }
